finished with breakpoints, validated HTML and CSS, finished with form bugs, added javascript to submit-button, fixed layout bugs

--- a/styles/sass/layouts/_contact.scss
+++ b/styles/sass/layouts/_contact.scss
@@ -23,13 +23,13 @@ text-align: left;
 @include font-size (40);
 margin-bottom:1rem;
 @include breakpoint (medium-tablet-max){
-  width:50%;
+  width:60%;
 }
 }
 .contact__form{
   @include flexBox(column, flex-start, space-between);
   width:100%;
-  legend p{
+  p{
     @include font-size (24);
     line-height: 1.8rem;
     text-align:left;
@@ -54,39 +54,30 @@ margin-bottom:1rem;
     border: none;
     outline: none;
     background: transparent;
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
     border-radius: 0;
-    margin: 0;
     display: block;
-    min-width:80%;
+    min-width:100%;
     flex-basis:100%;
     padding: 12px 55px 15px 15px;
     font-size: 18px;
     color: $color-alt-black;
     cursor: pointer;
   }
-  &:after{
-    position: absolute;
-    right: 0;
-    top: 2px;
-    width: 50px;
-    height: 100%;
-    line-height: 38px;
-    content: '\2228';
-    text-align: center;
-    font-size:1em;
-    font-weight: bold;
-    transition:.5s;
-    margin:auto;
-  }
-
-// select:hover{
-// select:after{
-// transform:rotate(-180deg);
-//  }}
-// //returning to this if time 
+ &:after{
+position: absolute;
+background: transparent;
+right: 0;
+top: 2px;
+width: 50px;
+height: 100%;
+line-height: 38px;
+content: '\2228';
+text-align: center;
+font-size:1em;
+font-weight: bold;
+pointer-events: none;
+}
 }
 .input{
   @include flexBox(column, center, space-between);
@@ -104,7 +95,6 @@ margin-bottom:1rem;
   border-color: $color-pink;
   border-style:solid;
 }
-
 .txtuserinput{
   width:100%;
   padding: 12px 55px 15px 15px;
@@ -124,17 +114,21 @@ margin-bottom:1rem;
   padding: 15px;
   text-align: center;
   flex-basis:100%;
-  // :hover{  //fungerar inte?
-  //   z-index:300;
-  //   background-color: $color-grey;
-  //   color:$color-black;
-  // }
-} //lägg in meddelande i js
+} 
+#log{
+padding-top:1rem;
+}
+
+.picture-info-map{
+  max-width: 1200px;
+}
+
 .picture-info{
   background-color: $color-black;
 padding-bottom:1rem;
   img{
     width:100%;
+    object-fit: cover; 
   }
 @include breakpoint(xsmall-max){
   @include flexBox(row, stretch, flex-start);
@@ -146,6 +140,12 @@ padding-bottom:1rem;
 }
 @include breakpoint(medium-tablet-max){
   img{width:70%;}
+}
+@include breakpoint(extra-large-max){
+  height:300px;
+}
+@media only screen and (min-width: $screen-xl){
+  height:300px;
 }
 }
   .contactdetails__div{
@@ -164,9 +164,12 @@ padding-bottom:1rem;
       @include flexBox(row,flex-start,space-between);}
   }
 
-.googlemap{
-  width:100%;
+.googlemap{ 
+width:100%;
 height:300px;
+@include breakpoint(small-max){
+  margin-top:2rem;}
 @include breakpoint(medium-tablet-max){
   height:400px;
-}}
+}
+}
